# VoxelThingEditorYeah

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: VoxelFormatYeah.md  editorFiles.md
editor/: tools.cpp  tools.hpp
render/: model.cpp
resources/: resources.qrc
resources/example/: example_entities.toml  games.toml  palette_internal.toml  palette_two.toml
src/: main.cpp
src/editor/: blockdefs.cpp  blockdefs.hpp  config.h.in  defs.cpp  defs.hpp  editorstate.cpp  editorstate.hpp  entity.cpp  entity.hpp  tools.cpp  tools.hpp  undo.cpp  undo.hpp
src/render/: model.cpp  model.hpp  texture.cpp  texture.hpp
src/ui/: mainwindow.cpp  mainwindow.hpp
src/ui/dialogs/: blocklist.cpp  blocklist.hpp  blockproperties.cpp  blockproperties.hpp  properties.cpp  properties.hpp  settingsdialog.cpp  settingsdialog.hpp
src/ui/docks/: currentblock.cpp  currentblock.hpp  editor4pane.cpp  editor4pane.hpp
src/ui/widgets/: betterslider.cpp  betterslider.hpp  blocktexture.cpp  blocktexture.hpp  colorpicker.cpp  colorpicker.hpp  renderwidget.cpp  renderwidget.hpp
src/widgets/: blockproperties.cpp  blockproperties.hpp  colorpicker.cpp  colorpicker.hpp  editor4pane.cpp  editor4pane.hpp  mainwindow.cpp  mainwindow.hpp  renderwidget.cpp  renderwidget.hpp  settingsdialog.cpp  settingsdialog.hpp
src/world/: chunk.cpp  chunk.hpp  raycast.cpp  raycast.hpp  vector.hpp  world.cpp  world.hpp
src/world/loading/: worldformat.cpp  worldformat.hpp
widgets/: colorpicker.cpp  editor4pane.cpp  editor4pane.hpp  gridwidget.cpp  gridwidget.hpp  mainwindow.cpp  mainwindow.hpp  renderwidget.cpp  renderwidget.hpp  settingsdialog.cpp  settingsdialog.hpp
world/: chunk.cpp  chunk.hpp  raycast.cpp  raycast.hpp
